BSL update/integrations, make timeouts lower